--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     implementation "com.xwray:groupie:2.3.0"
     implementation "com.xwray:groupie-viewbinding:2.9.0"
     implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
+    //jetpack Compose
+
 }
